Bug 259049 - [GLib] API test `/webkit/WebKitSettings/webkit-settings` is failing
Summary: [GLib] API test `/webkit/WebKitSettings/webkit-settings` is failing
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WPE WebKit (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-10 02:54 PDT by Vitaly Dyackhov
Modified: 2023-07-11 07:49 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Vitaly Dyackhov 2023-07-10 02:54:02 PDT
-
Comment 1 Vitaly Dyackhov 2023-07-10 03:09:27 PDT
Pull request: https://github.com/WebKit/WebKit/pull/15686
Comment 2 EWS 2023-07-11 07:48:57 PDT
Committed 265946@main (1ba6a9fa393e): <https://commits.webkit.org/265946@main>

Reviewed commits have been landed. Closing PR #15686 and removing active labels.