[GLib] API test `/webkit/WebKitSettings/webkit-settings` is failing https://bugs.webkit.org/show_bug.cgi?id=259049

Reviewed by Michael Catanzaro.

The test was failing because
`webkit_settings_get_load_icons_ignoring_image_load_setting()` and
`webkit_settings_set_load_icons_ignoring_image_load_setting()` are
deprecated and issue a `g_warning()` which is fatal by default in
Glib tests.

The solution is to temporarily remove `G_LOG_LEVEL_WARNING` from fatals.

Also, unlike some other similar deprecated API functions, these two were
not marked as `WEBKIT_DEPRECATED`.

* Source/WebKit/UIProcess/API/glib/WebKitSettings.cpp:
(webKitSettingsSetProperty):
(webKitSettingsGetProperty):
(webkit_settings_class_init):
* Source/WebKit/UIProcess/API/glib/WebKitSettings.h.in:
* Tools/TestWebKitAPI/Tests/WebKitGLib/TestWebKitSettings.cpp:
(testWebKitSettings):
(testWebKitSettingsNewWithSettings):
* Tools/TestWebKitAPI/glib/TestExpectations.json:

Canonical link: https://commits.webkit.org/265946@main